--- a/2day/Gemfile
+++ b/2day/Gemfile
@@ -29,6 +29,7 @@ gem 'html2slim'
 # gem 'image_processing', '~> 1.2'
 
 # Reduces boot times through caching; required in config/boot.rb
+gem 'bootsnap', '>= 1.4.2', require: false
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
